set font and layout basic

--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,153 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=1">
+    <link rel="stylesheet" href="assets/css/style.css?a=6">
     <title>Las marcas peruanas del futuro</title>    
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-m-12  red">12</div>
-            </div>
-            <div class="row">
-                <div class="col-m-12 one-title blue">
-                    <h1>Las marcas peruanas del futuro</h1>
+        <div class="one sky">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>Future Brand</h2>
+                    </div>
                 </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-third margin-bottom-30 ">
+                        <h1>Las marcas peruanas del futuro</h1>
+                        <p class="text-center one-subtitle-third">
+                            Una investigación sobre el potencial futuro de las
+                            <br />organizaciones peruanas y sus marcas.
+                        </p>
+                    </div>
+                </div>
+                <!--<div class="row">
+                    <div class="col-m-12 one-animation ">
+                        image animation                 
+                    </div>
+                </div>-->                          
             </div>
-            <div class="row">
-                <div class="col-m-12 red">12</div>
+
+            <div class="no-container one-animation">
+                <div class="clase"><h1>aa content for  animation</h1></div>
+                <div class="clase"><h1>bb content for  animation</h1></div>
+                <div class="clase"><h1>cc content for  animation</h1></div>
+            </div>
+        </div>
+
+        <div class="two white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>Future Brand</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
             </div>            
         </div>
+
+        <div class="three orange">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>Future ORANGE</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
+            </div>            
+        </div>
+
+        <div class="two white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>Future WHITE</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
+            </div>            
+        </div>
+
+        <div class="two violet">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>Future violet</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
+            </div>            
+        </div>
+
+        <div class="two white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                        <h2>white footer</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                        <p>
+                        The<br />
+                        creative<br />
+                        future<br />
+                        company.
+                        <p>
+                    </div>
+                </div>
+            </div>            
+        </div>                            
+
     </div>
     
 
