--- a/src/assets/fonts/museo-sans/MuseoSans-700/preview.html
+++ b/src/assets/fonts/museo-sans/MuseoSans-700/preview.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 <title>
-ChronicleTextG1-Semi
+MuseoSans-700
  - Web font preview
 </title>
 <style type='text/css'>
 
 @font-face {
-  font-family: 'ChronicleTextG1-Semi';
-  src: url('ChronicleTextG1-Semi.eot?#iefix') format('embedded-opentype'),  url('ChronicleTextG1-Semi.otf')  format('opentype'),
-	     url('ChronicleTextG1-Semi.woff') format('woff'), url('ChronicleTextG1-Semi.ttf')  format('truetype'), url('ChronicleTextG1-Semi.svg#ChronicleTextG1-Semi') format('svg');
+  font-family: 'MuseoSans-700';
+  src: url('MuseoSans-700.eot?#iefix') format('embedded-opentype'),  url('MuseoSans-700.otf')  format('opentype'),
+	     url('MuseoSans-700.woff') format('woff'), url('MuseoSans-700.ttf')  format('truetype'), url('MuseoSans-700.svg#MuseoSans-700') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-body { font-family: 'ChronicleTextG1-Semi' !important; }
+body { font-family: 'MuseoSans-700' !important; }
 h1, h2, h3, h4 { font-weight: normal; }
 .reg { color:black; background:white; }
 .inverse { color:white; background:black; }
@@ -52,9 +52,9 @@ definitions. Like this:
 </div>
 <div>
 <code style='font-size:11px;'>@font-face {
-  font-family: 'ChronicleTextG1-Semi';
-  src: url('/css/webfont/ChronicleTextG1-Semi.eot?#iefix') format('embedded-opentype'),  url('/css/webfont/ChronicleTextG1-Semi.otf')  format('opentype'),
-	     url('/css/webfont/ChronicleTextG1-Semi.woff') format('woff'), url('/css/webfont/ChronicleTextG1-Semi.ttf')  format('truetype'), url('/css/webfont/ChronicleTextG1-Semi.svg#ChronicleTextG1-Semi') format('svg');
+  font-family: 'MuseoSans-700';
+  src: url('/css/webfont/MuseoSans-700.eot?#iefix') format('embedded-opentype'),  url('/css/webfont/MuseoSans-700.otf')  format('opentype'),
+	     url('/css/webfont/MuseoSans-700.woff') format('woff'), url('/css/webfont/MuseoSans-700.ttf')  format('truetype'), url('/css/webfont/MuseoSans-700.svg#MuseoSans-700') format('svg');
   font-weight: normal;
   font-style: normal;
 }</code>
@@ -63,7 +63,7 @@ definitions. Like this:
 <div class='reg'>
 <h1>
 H1
-ChronicleTextG1-Semi
+MuseoSans-700
 </h1>
 <h2>
 H2
@@ -98,7 +98,7 @@ Curabitur auctor orci vel felis sodales porttitor. Aenean non neque auctor tellu
 <div class='inverse'>
 <h1>
 H1
-ChronicleTextG1-Semi
+MuseoSans-700
 </h1>
 <h2>
 H2
