--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=6">
-    <title>Las marcas peruanas del futuro</title>    
+    <link rel="stylesheet" href="assets/css/style.css?a=111">
+    <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="one sky">
             <div class="container">
-                <div class="row">
-                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                <div class="row margin-bottom-20">
+                    <div class="col-md-12 one-title-first margin-bottom-40 ">
                         <h2>Future Brand</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-m-12 one-title-second margin-bottom-40 ">
+                    <div class="col-md-12 one-title-second margin-bottom-40 ">
                         <p>
                         The<br />
                         creative<br />
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-m-12 one-title-third margin-bottom-30 ">
+                    <div class="col-md-12 one-title-third margin-bottom-30 ">
                         <h1>Las marcas peruanas del futuro</h1>
                         <p class="text-center one-subtitle-third">
                             Una investigación sobre el potencial futuro de las
@@ -38,10 +38,10 @@
                     </div>
                 </div>
                 <!--<div class="row">
-                    <div class="col-m-12 one-animation ">
-                        image animation                 
+                    <div class="col-md-12 one-animation ">
+                        image animation
                     </div>
-                </div>-->                          
+                </div>-->
             </div>
 
             <div class="no-container one-animation">
@@ -53,48 +53,101 @@
 
         <div class="two white">
             <div class="container">
-                <div class="row">
-                    <div class="col-m-12 one-title-first margin-bottom-40 ">
-                        <h2>Future Brand</h2>
+                <div class="row margin-bottom-30">
+                    <div class="col-md-4 red box-left"></div>
+                    <div class="col-md-4 text-center box-center blue">
+                        <div class="box-title">
+                            <h2>¿Cómo nace este estudio?</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-4 red box-right"></div>
+                </div>
+                <div class="row margin-bottom-35">
+                    <div class="col-md-12 two-description  ">
+                        <p>Hoy se suele entender la fortaleza y el desempeño de las marcas solo en función de sus resultados financieros. Sin embargo, la percepción que se tiene de las compañías es clave en su futura reputación y valor. Por ello tomando como base el ranking de las 500 mayores empresas del Perú elaborado por AméricaEconomía Intelligence elaboramos el estudio “Las marcas peruanas del futuro”.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-m-12 one-title-second margin-bottom-40 ">
-                        <p>
-                        The<br />
-                        creative<br />
-                        future<br />
-                        company.
-                        <p>
+                    <div class="col-md-6 twin-column">
+                        <div class="twin-column-left">
+                        <p>Este estudio nace tomando como referencia principal el estudio del FutureBrand Index global que tiene como hipótesis que la fuerza de las marcas del siglo 21 se entiende mejor en términos del equilibrio que existe entre su propósito (la razón de ser de la empresa) y la experiencia que brinda en función del mismo, y que ello es importante porque las organizaciones que logren este equilibrio tendrán una ventaja competitiva en el futuro. </p>
+                        <p>Decidimos poner a prueba esta hipótesis en el Perú teniendo como partner a América Economía que nos permitió utilizar el “ranking de las 500 mayores empresas” y así realizamos una encuesta a 3611 ejecutivos peruanos entre 21 y 75 años. </p>
+                        <p>El Informe de Las Marcas Peruanas del Futuro presenta los resultados de esas investigaciones incluyendo el Ranking de FutureBrand en comparación al de América.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 twin-column">
+                        <div class="twin-column-right">
+                        <p>Economía, una Matriz de Marcas que explica el lugar que ocupan hoy en función a su experiencia y propósito así como aquellas que sobresalen y por ello se denominan como “future brands”. Finalmente entre los principales hallazgos encontramos que las marcas que fueron clasificadas como “future brands” destacaron por tener una mayor preferencia de compra por parte de los encuestados, quienes también demostraron un mayor interés por ellas como lugar de trabajo.</p>
+                        <p>Este informe podrá ser útil para líderes peruanos que quieran tener un mayor conocimiento sobre las dimensiones que serán relevantes para lograr el éxito futuro de las marcas.</p>
+                        </div>
                     </div>
                 </div>
-            </div>            
+            </div>
+
+            <div class="no-container two-animation">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-10">
+                        <img align="right" class="img-responsive" 
+                        src="assets/img/manocelu.png" alt="mano-celular">
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="three orange">
             <div class="container">
-                <div class="row">
-                    <div class="col-m-12 one-title-first margin-bottom-40 ">
-                        <h2>Future ORANGE</h2>
+                <div class="row margin-bottom-30">
+                    <div class="col-md-4 red box-left"></div>
+                    <div class="col-md-4 text-center box-center blue">
+                        <div class="box-title">
+                            <h2>Principales hallazgos</h2>
+                        </div>
                     </div>
+                    <div class="col-md-4 red box-right"></div>
                 </div>
-                <div class="row">
-                    <div class="col-m-12 one-title-second margin-bottom-40 ">
-                        <p>
-                        The<br />
-                        creative<br />
-                        future<br />
-                        company.
-                        <p>
+                <div class="row" style="height: 130px;">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-10 text-center">
+                        <div class="man-pencil">
+                            <img class="img-responsive img-center"src="assets/img/hombrelapiz.png" alt="hombre-lapiz">
+                        </div>
                     </div>
+                    <div class="col-md-1"></div>
                 </div>
-            </div>            
+
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-5 three-description">
+                        <ul>
+                            <li><span>Los ingresos no son garantía de una marca fuerte para el futuro</span></li>
+                            <li><span>Las “future brands” en el Perú cuentan con una ventaja competitiva</span></li>
+                            <li><span>Las “future brands” son de origen peruano</span></li>
+                            <li><span>Las “marcas de experiencia” son principalmente marcas de consumo</span></li>
+                            <li><span>En el Perú no se perciben “marcas con propósito”</span></li>
+                            <li><span>Hay una gran oportunidad para que las “marcas corporativas” por las que los consumidores sienten admiración y pasión se conviertan en “future brands”</span></li>
+                            <li><span>La recordación de marca no es suficiente para ser una marca fuerte</span></li>
+                            <li><span>El sector de la industria en la que se desenvuelven las marcas influye en su percepción</span></li>
+                            <li><span>Ranking América Economía de las 500 mayores empresas del Perú- 2014</span></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-5">
+                        <div>
+                            <img class="img-responsive" src="assets/img/tabla.jpg" alt="tabla hallazgos">
+                        </div>
+                    </div>                    
+                    <div class="col-md-1"></div>
+                </div>
+
+
+            </div>
         </div>
 
         <div class="two white">
             <div class="container">
                 <div class="row">
-                    <div class="col-m-12 one-title-first margin-bottom-40 ">
+                    <div class="col-md-12 one-title-first margin-bottom-40 ">
                         <h2>Future WHITE</h2>
                     </div>
                 </div>
@@ -108,7 +161,7 @@
                         <p>
                     </div>
                 </div>
-            </div>            
+            </div>
         </div>
 
         <div class="two violet">
@@ -128,7 +181,7 @@
                         <p>
                     </div>
                 </div>
-            </div>            
+            </div>
         </div>
 
         <div class="two white">
@@ -148,11 +201,11 @@
                         <p>
                     </div>
                 </div>
-            </div>            
-        </div>                            
+            </div>
+        </div>
 
     </div>
-    
+
 
     <script type='text/javascript' src='assets/plugins/bootstrap/js/bootstrap.min.js'></script>
 </body>
