--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=111">
+    <link rel="stylesheet" href="assets/css/style.css?a=12">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -131,6 +131,9 @@
                             <li><span>El sector de la industria en la que se desenvuelven las marcas influye en su percepción</span></li>
                             <li><span>Ranking América Economía de las 500 mayores empresas del Perú- 2014</span></li>
                         </ul>
+
+                        <a href="#downloadRanking" class="btn btn-default btn-lg btn-download">Descargar el Ranking completo</a>
+
                     </div>
                     <div class="col-md-5">
                         <div>
@@ -138,6 +141,12 @@
                         </div>
                     </div>                    
                     <div class="col-md-1"></div>
+                </div>
+
+                <div class="row margin-bottom-60">
+                    <div class="col-md-12 text-left">
+                        
+                    </div>
                 </div>
 
 
