--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=12">
+    <link rel="stylesheet" href="assets/css/style.css?a=12212">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -45,9 +45,8 @@
             </div>
 
             <div class="no-container one-animation">
-                <div class="clase"><h1>aa content for  animation</h1></div>
-                <div class="clase"><h1>bb content for  animation</h1></div>
-                <div class="clase"><h1>cc content for  animation</h1></div>
+                <div class="clase"><h1>animation animation  animation animation animation animation</h1></div>
+
             </div>
         </div>
 
