--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=12212">
+    <link rel="stylesheet" href="assets/css/style.css?a=1">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -131,7 +131,7 @@
                             <li><span>Ranking América Economía de las 500 mayores empresas del Perú- 2014</span></li>
                         </ul>
 
-                        <a href="#downloadRanking" class="btn btn-default btn-lg btn-download">Descargar el Ranking completo</a>
+                        <a href="#download" class="btn btn-default btn-lg btn-download">Descargar el Ranking completo</a>
 
                     </div>
                     <div class="col-md-5">
