understand center table and MEDIAQUERY

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=1">
+    <link rel="stylesheet" href="assets/css/style.css?a=se">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="no-container two-animation">
-                <div class="row">
+                <div class="rowx">
                     <div class="col-md-2"></div>
                     <div class="col-md-10">
                         <img align="right" class="img-responsive" 
@@ -100,8 +100,8 @@
                 <div class="row margin-bottom-30">
                     <div class="col-md-4 red box-left"></div>
                     <div class="col-md-4 text-center box-center blue">
-                        <div class="box-title">
-                            <h2>Principales hallazgos</h2>
+                        <div class="box-title orange">
+                            <h2 class="text-color-white">Principales hallazgos</h2>
                         </div>
                     </div>
                     <div class="col-md-4 red box-right"></div>
@@ -131,7 +131,7 @@
                             <li><span>Ranking América Economía de las 500 mayores empresas del Perú- 2014</span></li>
                         </ul>
 
-                        <a href="#download" class="btn btn-default btn-lg btn-download">Descargar el Ranking completo</a>
+                        <a href="#download" class="btn btn-default btn-lg btn-download">Descargar el Ranking<span class="hidden-xs"> completo</span></a>
 
                     </div>
                     <div class="col-md-5">
@@ -152,27 +152,57 @@
             </div>
         </div>
 
-        <div class="two white">
+        <div class="four white">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 one-title-first margin-bottom-40 ">
-                        <h2>Future WHITE</h2>
+                <div class="row margin-bottom-30">
+                    <div class="col-md-4 red box-left"></div>
+                    <div class="col-md-4 text-center box-center blue">
+                        <div class="box-title">
+                            <h2>¿Por qué es importante ser una “future brand”?</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-4 red box-right"></div>
+                </div>
+
+                <div class="row margin-bottom-65">
+                    <div class="col-md-12 two-description  ">
+                        <p>El estudio demuestra que cuando las personas clasifican a una marca como una “future brand”, la intención de querer comprar uno de sus productos y trabajar en la empresa es casi 3 veces mayor en comparación con una marca corporativa.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-m-12 one-title-second margin-bottom-40 ">
-                        <p>
-                        The<br />
-                        creative<br />
-                        future<br />
-                        company.
-                        <p>
+                    <div class="col-md-6">
+                        <div class="centered">
+                        <table  class="table1" width="auto" border="1" align="" >
+                            <tr>
+                                <td>Les gustaria trabajar</td>                                
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img src="assets/img/cuadro_trabajar.jpg" alt="cuadro-trabajar">
+                                </td>
+                            </tr>
+                        </table>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="centered">
+                        <table class="table2" width="auto" border="1" align="">
+                            <tr>
+                                <td>Les gustaria comprar</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img src="assets/img/cuadro_comprar.jpg" alt="cuadro-comprar">
+                                </td>
+                            </tr>
+                        </table>
+                        </div>                       
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="two violet">
+        <div class="five violet">
             <div class="container">
                 <div class="row">
                     <div class="col-m-12 one-title-first margin-bottom-40 ">
